--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>HALLO DAG IEDEREEN</title>
+</head>
+<body>
+    <header>
+        <nav></nav>
+    </header>
+    <main></main>
+    <aside></aside>
+    <footer></footer>
+</body>
+
     
 </html>
