--- a/index.html
+++ b/index.html
@@ -4,15 +4,35 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HALLO DAG IEDEREEN</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/main.js" defer></script>
 </head>
 <body>
-    <header>
-        <nav></nav>
-    </header>
-    <main></main>
-    <aside></aside>
-    <footer></footer>
-</body>
 
-    
+
+<header>
+    <div class="logo"><h1>arvodes</h1></div>
+    <nav>
+        <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a href="works.html">works</a></li>
+            <li><a href="music.html">sounds</a></li>
+            <li><a href="about.html">about</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main>
+    <div class="card">
+        <h2 class="quote">i am a very productive and socially capable person. also i am very employable.</h2>
+        <img id="facePic" src="images/face.jpg" alt="" title="my face, of which i'm mildly insecure but i guess its not that bad like some people are born with faces that are like actually unfixable. itd be great if someone would employ me for a full time job so i could get started in my career and maybe even get some surgery to fix my mug" onclick="alert('dont touch my face like rude')">
+    </div>
+</main>
+<aside></aside>
+<footer></footer>
+
+
+
+
+</body>  
 </html>
