--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 </header>
 
 <main>
+    <div class="bignav">
+        <ul>
+            <li><a href="project.html">projektekes</a><p>lijstje met al mijn projecten die geen muziek zijn</p></li>
+            <li><a href="music.html">sounds</a><p>lijstje met al mijn projecten die muziek zijn</p></li>
+            <li><a href="about.html">about</a></li>
+        </ul>
+    </div>
     <div class="card">
         <h2 class="quote">i am a very productive and socially capable person. also i am very employable.</h2>
         <img id="facePic" src="images/face.jpg" alt="" title="my face, of which i'm mildly insecure but i guess its not that bad like some people are born with faces that are like actually unfixable. itd be great if someone would employ me for a full time job so i could get started in my career and maybe even get some surgery to fix my mug" onclick="alert('dont touch my face like rude')">
