--- a/music.html
+++ b/music.html
@@ -1,2 +1,32 @@
-<article style="display: flex;"><p style="margin-right: 1rem;">i kinda used to make</p><div class="wave">vaporwave</div> <img src="images/uwu.gif" alt="uwu" style="width: 2rem;"></article>
-<iframe style="border: 0; width: 350px; height: 555px;" src="https://bandcamp.com/EmbeddedPlayer/album=3235989881/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="https://arvod.bandcamp.com/album/saldo-ontoereikend-ep">SALDO ONTOEREIKEND EP by Arvo</a></iframe>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>HALLO DAG IEDEREEN</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/main.js" defer></script>
+</head>
+
+<body>
+
+
+<header>
+    <div class="logo"><h1>arvodes</h1></div>
+    <nav>
+        <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a href="project.html">projektekes</a></li>
+            <li><a href="music.html">sounds</a></li>
+            <li><a href="about.html">about</a></li>
+        </ul>
+    </nav>
+</header>
+<audio autoplay src="audio/test.mp3" controls></audio>
+
+<main>
+    <article style="display: flex;"><p style="margin-right: 1rem;">i kinda used to make</p><div class="wave">vaporwave</div> <img src="images/uwu.gif" alt="uwu" style="width: 2rem;"></article>
+    <iframe style="border: 0; width: 350px; height: 555px;" src="https://bandcamp.com/EmbeddedPlayer/album=3235989881/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="https://arvod.bandcamp.com/album/saldo-ontoereikend-ep">SALDO ONTOEREIKEND EP by Arvo</a></iframe>
+</main>
+</body>
+</html>
