--- a/radio.html
+++ b/radio.html
@@ -29,6 +29,6 @@
                 </div>
             </div>
         <div id="progress"><output id="duration"></output></div>
-        <span class="information"> placeholder information </span>
+        <span class="information"><p style="color: white;"> placeholder information </p></span>
     </div>
 </body>
