--- a/music.html
+++ b/music.html
@@ -10,6 +10,7 @@
 
 <body>
 
+<iframe id="radio" src="/player/radio.html"></iframe>
 
 <header>
     <div class="logo"><h1>arvodes</h1></div>
@@ -22,11 +23,11 @@
         </ul>
     </nav>
 </header>
-<audio autoplay src="audio/test.mp3" controls></audio>
 
 <main>
     <article style="display: flex;"><p style="margin-right: 1rem;">i kinda used to make</p><div class="wave">vaporwave</div> <img src="images/uwu.gif" alt="uwu" style="width: 2rem;"></article>
     <iframe style="border: 0; width: 350px; height: 555px;" src="https://bandcamp.com/EmbeddedPlayer/album=3235989881/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="https://arvod.bandcamp.com/album/saldo-ontoereikend-ep">SALDO ONTOEREIKEND EP by Arvo</a></iframe>
 </main>
+
 </body>
 </html>
