--- a/music.html
+++ b/music.html
@@ -24,6 +24,10 @@
     </nav>
 </header>
 
+<div id="playlist">
+
+</div>
+
 <main>
     <article style="display: flex;"><p style="margin-right: 1rem;">i kinda used to make</p><div class="wave">vaporwave</div> <img src="images/uwu.gif" alt="uwu" style="width: 2rem;"></article>
     <iframe style="border: 0; width: 350px; height: 555px;" src="https://bandcamp.com/EmbeddedPlayer/album=3235989881/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="https://arvod.bandcamp.com/album/saldo-ontoereikend-ep">SALDO ONTOEREIKEND EP by Arvo</a></iframe>
