--- a/player/radio.html
+++ b/player/radio.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <!---RADIO TEST--->
-
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
 <link rel="stylesheet" href="/css/player.css">
 <script src="/player/player.js" defer></script>
 <div class="wrapper">
