--- a/music.html
+++ b/music.html
@@ -8,9 +8,7 @@
     <script src="js/main.js" defer></script>
 </head>
 
-<body>
-
-<iframe id="radio" src="/player/radio.html"></iframe>
+<body style="height: 200vh;">
 
 <header>
     <div class="logo"><h1>arvodes</h1></div>
@@ -23,15 +21,14 @@
         </ul>
     </nav>
 </header>
-
-<div id="playlist">
-
-</div>
-
 <main>
     <article style="display: flex;"><p style="margin-right: 1rem;">i kinda used to make</p><div class="wave">vaporwave</div> <img src="images/uwu.gif" alt="uwu" style="width: 2rem;"></article>
     <iframe style="border: 0; width: 350px; height: 555px;" src="https://bandcamp.com/EmbeddedPlayer/album=3235989881/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="https://arvod.bandcamp.com/album/saldo-ontoereikend-ep">SALDO ONTOEREIKEND EP by Arvo</a></iframe>
 </main>
 
+<div id="radioBox">
+    <iframe id="radio" src="/player/radio.html"></iframe>
+    <div id="playlist"></div>
+</div>
 </body>
 </html>
