--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="/js/index.js" defer></script>
 </head>
+
 <!---------Navigator------------->
 <body>
   <div id="wrapper">
     <div class="background" id="background"></div>
-    <h1><a id="logo" href="about.html">arvodes.be</a></h1>
+    <h1><a id="logo" href="index.html">arvo</a></h1>
     <nav>
       <ul id="list">
         <li><a onclick="blips()" onmouseover="hoverNav(1)">blips</a></li>
         <li><a onclick="blops()" onmouseover="hoverNav(2)">blops</a></li>
-        <li><a onclick="news()" onmouseover="hoverNav(3)">news</a></li>
-        <li><a onclick="links()" onmouseover="hoverNav(4)">links</a></li>
-        <li><a onclick="about()" onmouseover="hoverNav(5)">about</a></li>
+        <li><a onclick="showLinks()" onmouseover="hoverNav(4)">links</a></li>
       </ul>
     </nav>
     
