--- a/music.html
+++ b/music.html
@@ -11,7 +11,7 @@
 <body style="height: 200vh;">
 
 <header>
-    <div class="logo"><h1>arvodes</h1></div>
+    <div class="logo"><h1>arvo</h1></div>
     <nav>
         <ul>
             <li><a href="index.html">home</a></li>
