--- a/index.html
+++ b/index.html
@@ -28,4 +28,7 @@
     <button id="fwd" onclick="link()"></button>
     <button id="back" onclick="back()"></button>
   </div>
+  
+  <!-- Player at bottom of page (hidden until user clicks) -->
+  <iframe id="player-frame" src="/player/radio.html" style="border:0;width:100%;height:180px;position:fixed;bottom:0;left:0;z-index:1000;display:none;" title="radio-player"></iframe>
 </body>
