still had to do it obvvvvv

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
       <ul id="list">
         <li><a onclick="blips()" onmouseover="hoverNav(1)">blips</a></li>
-        <li><a onclick="blops()" onmouseover="hoverNav(2)">blops</a></li>
+        <!-- <li><a onclick="blops()" onmouseover="hoverNav(2)">blops</a></li> -->
         <li><a onclick="showLinks()" onmouseover="hoverNav(4)">links</a></li>
       </ul>
     </nav>
