big one we making money

--- a/player/radio.html
+++ b/player/radio.html
@@ -29,7 +29,7 @@
             </div>
         </div>
     <div id="progress"><output id="duration"></output></div>
-    <span class="information"><p class=infotext; style="color: white; opacity: 0.9;"> ARVO 2 hr mix </p></span>
+    <span class="information"><p class="infotext">ARVO 2 hr mix</p></span>
 </div>
 </body>
 </html>
