yupUpdate radio.html

--- a/player/radio.html
+++ b/player/radio.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <audio id="audio-element" src="/audio/test.mp3" type="audio/mp3" data-currentSong="true" step="0.01" loop></audio>
+    <audio id="audio-element" src="/audio/30min.mp3" type="audio/mp3" data-currentSong="true" step="0.01" loop></audio>
     <div id="tlWrap"><input type="range" id="timeline"></div>
     <div class="player">
         <button alt="rew" id="rew" onclick="rewAudio();"></button>
