puntjes op i ofszo

--- a/player/radio.html
+++ b/player/radio.html
@@ -28,8 +28,8 @@
                 <input type="range" id="volumeslider" oninput="change_vol()">
             </div>
         </div>
-    <div id="progress"><output id="duration"></output></div>
-    <span class="information"><p class="infotext">ARVO 2 hr mix</p></span>
+    <!-- <div id="progress"><output id="duration"></output></div> -->
+    <span class="information"><p class="infotext">arvo 2025 mix</p></span>
 </div>
 </body>
 </html>
